<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:layout_marginBottom="2dp"
        android:background="@color/layouts_background"
        android:orientation="horizontal" >

        <TextView
            style="@style/textviewstyle_MainHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_hub"
            android:textColor="@color/apphub_header_color" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/header_divider" />

        <TextView
            android:id="@+id/homeLayout_headerDetail"
            style="@style/textviewstyle_MainHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeLayout_baseContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/view_round_corner"
        android:orientation="vertical" >

       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeLayout_bottomMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="2.8"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/homeLayout_bottomLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:background="@drawable/view_round_corner_color"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/homeLayout_textView_productCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="2dp"
                    android:text="@string/ProductCount"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <View 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/homeLayout_imageView_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="bottom"
                    android:src="@drawable/close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                
                <LinearLayout 
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:layout_marginRight="2dp"
                    android:background="@color/sort_by_background"
                    android:gravity="center">
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SortBy"
                        android:textSize="10sp"
                        android:textColor="@color/sort_by_color"/>
                </LinearLayout>
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="0">
                <Button 
                    android:id="@+id/homeLayout_button_inapp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/InAppPurchase"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector_home"/>
                
               <Button 
                    android:id="@+id/homeLayout_button_rating"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/Rating"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_selector_home"/>
               </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeLayout_bottomLayoutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="bottom"
            android:visibility="gone" >
            
            <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">
                <Button 
                    android:id="@+id/homeLayout_button_appStore"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/AppStore"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_appstore_selector"/>
                
               <Button 
                    android:id="@+id/homeLayout_button_back"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/back"/>
               </LinearLayout>
               
             <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">
                <Button 
                    android:id="@+id/homeLayout_button_share"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/share"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_appstore_selector"/>
                
               <Button 
                    android:id="@+id/homeLayout_button_sms"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/sms"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_appstore_selector"/>
               </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>